tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/experimental/import-assertions/valid-syntax-export-with-attributes/input.js
export { foo } from "foo.json" assert { type: "json" };
