tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/experimental/import-assertions/invalid-syntax-with-repeated-type/input.js
import foo from "foo.json" assert { type: "json", type: "html" };
